--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,15 @@
 joblib==1.2.0
-keras==2.11.0
+keras~=2.12.0
 matplotlib==3.7.1
-numpy==1.23.4
+numpy~=1.23.5
 pandas==1.5.1
-requests==2.28.1
+requests~=2.30.0
 scikeras==0.10.0
 scikit_learn==1.2.2
 scipy==1.10.1
 tensorflow==2.12.0
 wandb==0.15.0
 scikit_optimize==0.9.0
+optuna==3.1.0
+
+scikit-learn~=1.2.2
